Closed Bug 1303865 Opened 9 years ago Closed 9 years ago

[FlyWeb] Fix shutdown leak of FlyWebService

Categories

(Core Graveyard :: DOM: Flyweb, defect)

defect
Not set
normal

Tracking

(firefox52 fixed)

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: djvj, Unassigned)

References

Details

Attachments

(1 file)

Noticed this when testing the test-suite code. Using FlyWebService causes a shutdown leak because the FlyWebService singleton (stored as a global) is never destroyed. It should be destroyed on shutdown. Patch attached.
Attachment #8792663 - Flags: review?(mconley)
Comment on attachment 8792663 [details] [diff] [review] fix-flywebservice-leak.patch Review of attachment 8792663 [details] [diff] [review]: ----------------------------------------------------------------- I'm not too privy to the FlyWebService code at all, but clearing this global on shutdown makes sense, and it looks like we're obeying the rules of ClearOnShutdown.h. r=me.
Attachment #8792663 - Flags: review?(mconley) → review+
Pushed by kvijayan@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/8d8429f8baca Fix shutdown leak of FlyWebService. r=mconley
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Product: Toolkit → Core
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: