Bug 1303865 - Fix shutdown leak of FlyWebService. r=mconley